infrastructure/instances/traefik/tailnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-tailnet
  namespace: traefik
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
    tailscale.com/tags: "tag:internal-apps"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - traefik
  defaultBackend:
    service:
      name: traefik-dashboard
      port:
        number: 8003
